# duckdb-sqllogictest-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  justfile  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
openspec/: config.yaml  project.md
openspec/changes/archive/2026-01-22-add-cli-contract/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-22-add-duckdb-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-22-add-extension-spec-parsing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-22-add-files-glob-support/: proposal.md  tasks.md
openspec/changes/archive/2026-01-22-init-rust-project/: proposal.md  tasks.md
openspec/changes/archive/2026-01-22-remove-format-flag-and-improve-failures/: design.md  proposal.md  tasks.md
openspec/specs/duckdb-connection/: spec.md
openspec/specs/duckdb-corpus-compat-harness/: spec.md
openspec/specs/duckdb-slt-cli/: spec.md
openspec/specs/duckdb-slt-driver/: spec.md
openspec/specs/preprocessor-pipeline/: spec.md
openspec/specs/rust-project/: spec.md
src/: cli.rs  duckdb_driver.rs  extensions.rs  main.rs  orchestrator.rs  pathing.rs  preprocessor.rs  reporting.rs  runtime.rs
tests/: cli.rs
tests/fixtures/: canonical_values.slt  column_count_too_few.slt  column_count_too_many.slt  extensions_repositories.slt  fail.slt  fail_labeled.slt  onlyif_duckdb.slt  onlyif_non_duckdb.slt  pass.slt  pass2.slt  quack_hello.slt  require_fail.slt  require_missing_extension.slt  require_quack_hello.slt  require_quack_hello.slt.hold  skipif_duckdb.slt  statement_returning_rows.slt  type_fidelity.slt  unsigned_extensions_disabled.slt  unsigned_extensions_enabled.slt  unsupported_required_directive_mode.slt  zero_rows.slt
(+56 files in other folders)
