[package]
name = "duckdb-slt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.86"
arrow-schema = "56.2.0"
clap = { version = "4.5.23", features = ["derive"] }
duckdb = { version = "1.4.3", features = ["bundled"] }
glob = "0.3.1"
sqllogictest = "0.29.0"

[workspace]
resolver = "3"
