[package]
name = "duckdb-slt"
version = "0.1.8"
edition = "2024"
rust-version = "1.89"
description = "Command-line sqllogictest runner for DuckDB."
license = "MIT"
homepage = "https://github.com/dotneB/duckdb-sqllogictest-rs"
repository = "https://github.com/dotneB/duckdb-sqllogictest-rs"
documentation = "https://docs.rs/duckdb-slt"
exclude = [
    "/.github/**",
    "/.vscode/**",
    "/openspec/**",
    "**/*.duckdb_extension",
    "**/*.duckdb_extension.gz",
]

[dependencies]
anyhow = "1.0.100"
arrow-schema = "58"
clap = { version = "4.5.54", features = ["derive"] }
duckdb = { version = "=1.10502.0", features = ["bundled"] }
glob = "0.3.3"
sqllogictest = "0.29.1"

[workspace]
resolver = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
